manifests/httpbin/destination-rule.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: httpbin-api-dr
spec:
  host: httpbin.default.svc.cluster.local
  subsets:
  - name: v1
    labels:
      version: v1
