manifests/httpbin/virtual-service.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: httpbin-api-vs
spec:
  hosts:
    - "*"
  gateways:
    - httpbin-api-gateway
  http:
    - route:
        - destination:
            host: httpbin.default.svc.cluster.local
            subset: v1
            port:
              number: 8000
